manifests/boutique/boutique-internal-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: boutique-internal-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "boutique.<internal-dns-name>"
  # - port:
  #     number: 443
  #     name: https
  #     protocol: HTTPS
  #   tls:
  #     mode: SIMPLE
  #     credentialName: asm-tls-secret
  #   hosts:
  #   - "*"

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: boutique-internal-virtual-service
spec:
  hosts:
  - "boutique.<internal-dns-name>"
  gateways:
  - boutique-internal-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend-external
        port:
          number: 80
